--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,17 @@
 body {
   font-family: Montserrat;
+  background-color: gainsboro;
 }
 
 h1 {
   text-align: center;
+}
+
+h3, p {
+  text-align: right;
+  color: black;
+}
+
+.fp-tooltip {
+  color: black !important;
 }/*# sourceMappingURL=main.css.map */
