--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,15 @@
+
 body {
     font-family: Montserrat;
+    background-color: gainsboro;
 }
 h1 {
     text-align: center;
+}
+h3, p {
+    text-align: right;
+    color: black;
+}
+.fp-tooltip {
+    color: black!important;
 }
